5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1613_1806.log
== TEST (2019-04-09 19:00:01) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round(1-(factorial(365)/factorial(365-n))*(1/(365*n)),2)
-- ERROR:
File "XXXX", line 4
    
                                                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:01:58) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round(1-(factorial(365)/factorial(365-n))*(1/(365*n)),2)))
-- OUTPUT:
-1.0633404628842717e+27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:04:18) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round(1-factorial(365)/factorial(365-n)*1/(365*n),2)))
-- OUTPUT:
-1.0633404628842717e+27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:04:41) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round(1-factorial(365)/factorial(365-n)*1/(365**n),2)))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:04:53) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round(1-factorial(365)/factorial(365-n)*1/(365**n),2)))
-- EXECUTION TIME:
0.182157
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
0.17
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
0.54
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:05:56) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round(1-(factorial(365)/factorial(365-n))*(1/(365**n)),2)))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:06:48) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round(1-(factorial(365)/factorial(365-n))*(1/(365**n))*100,2)))
-- OUTPUT:
-82.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:08:22) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round((1-(factorial(365)/factorial(365-n))*(1/(365**n))*100),2)))
-- OUTPUT:
-82.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:08:34) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round((1-(factorial(365)/factorial(365-n))*(1/(365**n))*100),2)))
-- EXECUTION TIME:
0.1952
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
-82.3
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
-45.17
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:47:11) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round((1-(factorial(365)/factorial(365-n))*(1/(365**n))*100),2)))
-- EXECUTION TIME:
0.123583
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
-82.3
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
-45.17
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:51:32) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round(1-(factorial(365)/factorial(365-n))*(1/(365**n))*100),2))
-- EXECUTION TIME:
0.153738
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1806/main.py", line 3, in <module>
    print(float(round(1-(factorial(365)/factorial(365-n))*(1/(365**n))*100),2))
TypeError: float() takes at most 1 argument (2 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:52:08) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round(1-(factorial(365)/factorial(365-n))*(1/(365**n)),2))
-- EXECUTION TIME:
0.239781
-- ERROR:
  File "/home/codebench/codes/1613/1806/main.py", line 4
    
                                                                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:54:18) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round(1-factorial(365)/factorial(365-n)*(1/365**n),2)))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:54:52) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round((1-factorial(365)/factorial(365-n)*(1/365**n)*100),2)))
-- EXECUTION TIME:
0.158753
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
-82.3
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
-45.17
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:54:54) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round((1-factorial(365)/factorial(365-n)*(1/365**n)*100),2)))
-- OUTPUT:
-82.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:55:24) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round((1-factorial(365)/factorial(365-n)*(1/365**n))*100),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(float(round((1-factorial(365)/factorial(365-n)*(1/365**n))*100),2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:56:24) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round((1-factorial(365)/factorial(365-n)*(1/365**n))*100),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(float(round((1-factorial(365)/factorial(365-n)*(1/365**n))*100),2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:00:25) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round(((1-(factorial(365)/factorial(365-n))*(1/(365**n)))*100),2)))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 20:00:34) 
-- CODE:
from math import *
n=int(input("numero de pessoas: "))
print(float(round(((1-(factorial(365)/factorial(365-n))*(1/(365**n)))*100),2)))
-- EXECUTION TIME:
0.209458
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
